# abac-mongo-cli

./: .abac_mongo_history  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
abac_mongo_cli/: __init__.py  abac.py  main.py
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
policies/: admin_full_access.json  denyAll.1json  denyAll.json  om_chief_orders_crud.1json  om_chief_orders_crud.json  om_invoices_clearance_create_delete.json  om_invoices_clearance_read.json  om_orders_editor.json  om_read_orders_status.1json  om_read_orders_status.json  om_self_orders_crud copy.json  om_self_orders_crud.1json  om_self_orders_crud.json
