[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "abac-mongo-cli"
version     = "0.1.0"
description = "CLI for MongoDB with ABAC enforcement using Py-ABAC"
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [
  { name = "Rúben Pereira", email = "18375@stu.ipbeja.pt" }
]
dependencies = [
  "pymongo",
  "py-abac[mongo]",
  "prompt_toolkit"
]

urls = { 
  "Repository"     = "https://github.com/rmgp-2009/abac-mongo-cli",
  "Documentation"  = "https://github.com/rmgp-2009/abac-mongo-cli#readme"
}

[project.scripts]
northwind = "abac_mongo_cli.main:shell"

[tool.setuptools.packages.find]
# only the main package, excluding the rest
include = ["abac_mongo_cli*"]
exclude = ["policies*"]

[tool.setuptools.package-data]
"" = [
  "LICENSE",
  "THIRD_PARTY_NOTICES.md"
]
